--- a/src/app/course-post/course-post.component.html
+++ b/src/app/course-post/course-post.component.html
@@ -1,1 +1,10 @@
-<p>course-post works!</p>
+<!--
+<h3>{{post.title}}</h3>
+<h4><small class="text-muted">By ... at ...</small></h4>
+
+<ul *ngFor="let filename of filenames">
+    <li>
+        {{filename}}
+    </li>
+</ul>
+-->
