lotta stuff:[IATBA] assignments, courses, sign-up, log in, create course. Merged Virendra's components into master

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<p>dashboard works!</p>
+<h1>Courses you attend:</h1>
+<app-course [courses]="studentCourses"></app-course>
+<h1>Courses you instruct:</h1>
+<app-course [courses]="instructorCourses"></app-course>
