--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,7 +1,9 @@
 <h2>Signup</h2>
 <form  #usercreate = "ngForm" (ngSubmit) = "createUser(usercreate.value)">
+    <label for="usernam">Full Name:</label>
+    <input type="text" id="name" name=username ngModel><br><br>
     <label for="userid">UserID:</label>
-    <input type="text" id="name" name="userid" ngModel><br><br>
+    <input type="text" id="id" name="userid" ngModel><br><br>
     <label for="password">Password:</label>
     <input type="text" id="password" name="password" ngModel><br><br>
     <button type="submit">Submit</button>
