--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<h2>Hello, {{userid}}!</h2>
 <h1>Courses you attend:</h1>
 <app-course [courses]="studentCourses"></app-course>
 <h1>Courses you instruct:</h1>
