--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <h2>Hello, {{userid}}!</h2>
 <h1>Courses you attend:</h1>
-<app-course [courses]="studentCourses"></app-course>
+<app-course [isprof]="false" [courses]="studentCourses"></app-course>
 <h1>Courses you instruct:</h1>
-<app-course [courses]="instructorCourses"></app-course>
+<app-course [isprof]="true" [courses]="instructorCourses"></app-course>
