--- a/src/app/components/course-post/course-post.component.html
+++ b/src/app/components/course-post/course-post.component.html
@@ -1,10 +1,9 @@
-<!--
-<h3>{{post.title}}</h3>
-<h4><small class="text-muted">By ... at ...</small></h4>
 
-<ul *ngFor="let filename of filenames">
+<h3>{{post.title}}</h3>
+<!-- <h4><small class="text-muted">By ... at ...</small></h4> -->
+<p>{{post.instruction}}</p>
+<!-- <ul *ngFor="let filename of filenames">
     <li>
         {{filename}}
     </li>
-</ul>
--->
+</ul> -->
