--- a/src/app/components/create-course/create-course.component.html
+++ b/src/app/components/create-course/create-course.component.html
@@ -2,7 +2,7 @@
 
 <div style="margin: 40px;">
 
-    <form action="{{server_url}}/create_course" method="post" target="_self">
+    <form action="{{server_url}}/create/course" method="post" target="/co">
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="createCourseCode" placeholder="AA101">
             <label for="createCourseCode" class="form-label">Course code</label>
