--- a/src/app/components/course-item/course-item.component.html
+++ b/src/app/components/course-item/course-item.component.html
@@ -1,36 +1,45 @@
-<h3 style="text-align: center; padding: 10px">
-    {{courseItem.courseCode}} <br>
-    <small class="text-muted">{{courseItem.courseName}}</small>
-</h3>
-<ul>
-    <div *ngFor="let task of assignments" (click)="navigateToSub(task)">
-        <h1 class="alert alert-info" >Assignment {{task.number}}: {{task.title}}</h1>
-    </div>
-</ul>
-<ul>
-    <div *ngFor="let post of posts" (click)="navigateToPost(post)">
-        <h1 class="alert alert-info" >Post {{post.number}}: {{post.title}}</h1>
-    </div>
-</ul>
+<table class="table">
+    <colgroup>
+        <col span="1" style="width: 5%;">
+        <col span="1" style="width: 5%;">
+        <col span="1" style="width: 95%;">
+        </colgroup>
+    <tr>
+        <th colspan="3" style="text-align: center;"><h3>Posts</h3></th>
+    </tr>
+    <tr *ngFor="let post of posts" (click)="navigateToPost(post)">
+        <td><i class="bi bi-megaphone-fill" style="font-size: 2rem;"></i></td>
+        <td>
+            <h4>{{post.number}}</h4>
+        </td>
+        <td>
+            <h4>{{post.title}}</h4>
+        </td>
+    </tr>
+</table>
+<table class="table">
+    <colgroup>
+        <col span="1" style="width: 5%;">
+        <col span="1" style="width: 5%;">
+        <col span="1" style="width: 95%;">
+        </colgroup>
+    <tr>
+        <th colspan="3" style="text-align: center;"><h3>Assignments</h3></th>
+    </tr>
+    <tr *ngFor="let task of assignments" (click)="navigateToSub(task)">
+        <td><i class="bi bi-file-earmark-fill" style="font-size: 2rem;"></i></td>
+        <td>
+            <h4>{{task.number}}</h4>
+        </td>
+        <td>
+            <h4>{{task.title}}</h4>
+        </td>
+    </tr>
+</table>
 
-
-
-
-<!-- 
-<ul *ngFor="let post of courseItem.posts">
-    <li>
-        <h3>{{post.title}}</h3>
-        <h4><small class="text-muted">By <i>author</i> at <i>date-time</i></small></h4>
-        <p>{{post.desc}}</p>
-        
-        <ul *ngFor="let file of post.files">
-            <li [innerHTML]=file.name>
-            </li>
-        </ul>
-    </li>
-</ul> -->
-<!-- <ul> -->
-    <!-- <li *ngFor="let assignment of assignments"> -->
-    
-<!-- </li> -->
-<!-- </ul> -->
+<!--
+<div style="margin: 20px;">
+    <a class="btn btn-outline-primary" href="/courses/{{code}}/addPost">Add a Post</a>
+    <a class="btn btn-outline-primary" href="/courses/{{code}}/addAssign">Add an Assignment</a>
+</div>
+-->
