--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,23 @@
-<div class="topnav">
-    <a *ngIf="isauth" class="active" href="/dashboard">Dashboard</a>
-    <!-- <a *ngIf="isauth" href="/dashboard">Dashboard</a> -->
-    <a *ngIf="isauth" href="/grades">My Grades</a>
-    <a *ngIf="isauth" href="/create_course">Create Course</a>
-    <a *ngIf="isauth" href="/profile">Profile</a>
-    <a *ngIf="isauth" href="/logout">Log out</a>
-    <!-- <button (click)="loguserid()">Check ls</button> -->
-</div> 
+<nav *ngIf="isauth" class="navbar navbar-expand-lg navbar-dark bg-dark" style="font-size: large; margin-bottom: 20px;">
+
+    <div class="container-fluid">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item active">
+            <a *ngIf="isauth" class="nav-link" href="/dashboard">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a *ngIf="isauth" class="nav-link" href="/grades">My Grades</a>
+          </li>
+          <li class="nav-item">
+            <a *ngIf="isauth" class="nav-link" href="/create_course">Create Course</a>
+          </li>
+          <li class="nav-item">
+            <a *ngIf="isauth" class="nav-link" href="/profile">Profile</a>
+          </li>
+          <li>
+            <a *ngIf="isauth" class="nav-link" href="/logout">Log Out</a>
+          </li>
+        </ul>
+    </div>
+
+</nav>
