--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,15 +1,40 @@
-<div style="float:left;">
-<h2>Login</h2>
-<p *ngIf="userDNE" class="alert alert-danger">User ID Does Not Exist!</p>
-<p *ngIf="wrongPassword" class="alert alert-danger">Password is incorrect!</p>
-<form  #userlogin = "ngForm" (ngSubmit) = "sendcreds(userlogin.value)">
+<section class="vh-50">
 
-    <label for="name">User ID:</label>
-    <input type="text" id="name" name="name" ngModel><br><br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" ngModel><br><br>
-    <input type="submit" value="Login">
-</form>
-</div>
-<a class="btn btn-primary" href="/signup" style="float:left;">Signup</a>
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card shadow-2-strong" style="border-radius: 1rem;">
+            <div class="card-body p-5 text-center">
+  
+            <h3 class="mb-3">Login</h3>
+
+            <p *ngIf="userDNE" class="alert alert-danger">User ID Does Not Exist!</p>
+            <p *ngIf="wrongPassword" class="alert alert-danger">Password is incorrect!</p>
+          
+            <form  #userlogin = "ngForm" (ngSubmit) = "sendcreds(userlogin.value)">
+            
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="name" placeholder="User ID" name="name" ngModel>
+                    <label for="name" class="form-label">User ID</label>
+                </div>
+
+                <div class="form-floating mb-3">
+                    <input type="password" class="form-control" id="password" placeholder="Password" name="password" ngModel>
+                    <label for="password" class="form-label">Password</label>
+                </div>
     
+                <button class="btn btn-primary btn-lg col-12" type="submit">Login</button>
+            
+            </form>
+
+            <br>
+
+            Don't have an account? <a class="link-primary" href="/signup" style="display: inline;">Sign Up</a>!
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+</section>
