--- a/src/app/pages/post/post.component.html
+++ b/src/app/pages/post/post.component.html
@@ -1,5 +1,8 @@
 <div class="container">
-<h1>Post {{data.number}}: {{data.title}}</h1>
-<p>Instruction: {{data.instruction}}</p>
-<p>Release Date:{{data.releaseDate}}</p>
+    <h4>Post {{data.number}}: {{data.title}}</h4>
+    <hr/>
+    <p><b>Instruction</b>: {{data.instruction}}</p>
+    <hr/>
+    <p><b>Release Date</b>: {{data.releaseDate}}</p>
+    <hr/>
 </div>
